--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,9 @@
     	<title><%= title %></title>
     	<link rel='stylesheet' href='/stylesheets/style.css' />
     	<link rel='stylesheet' href='/stylesheets/daye_style.css' />
+    	<link rel='stylesheet' href='/stylesheets/common.css' />
+<!--     	<link rel='stylesheet' href='/stylesheets/base.css' /> -->
+  		<script type="text/javascript" src="/javascripts/jquery.js"></script>
     </head>
   	<body>
   		<%- body %>
