用户中心功能的完善

--- a/views/person.ejs
+++ b/views/person.ejs
@@ -1,14 +1,31 @@
 <% if(user){ %>
 	<h1><%= user.name %></h1>
-	<ul>
-		<li>性别：<%= user.sex %></li>
-		<li>个性签名：<%= user.signature %></li>
-		<li>专业：<%= user.major %></li>
-		<li>等级：<%= user.level %></li>
+	<div id="showBox">
+		<ul>
+			<li>性别：<%= user.sex %></li>
+			<li>个性签名：<%= user.signature %></li>
+			<li>专业：<%= user.major %></li>
+			<li>等级：<%= user.level %></li>
+		</ul>
 		<% if(curUser.name === user.name){ %>
-			<input type="button" value="编辑" />
+			<input type="button" value="编辑" id="editBtn" />
 		<% } %>
-	</ul>
+	</div>
+	<div id="editBox" style="display: none;">
+		<form method="post" action="/user/edit">
+			<p>性别：
+				<input type="radio" name="sex" value="男" checked="checked" />男
+				<input type="radio" name="sex" value="女" />女
+			</p>
+			<p>
+			个性签名：<input type="text" name="signature" value="<%= user.signature %>" />
+			</p>
+			<p>
+			专业：<input type="text" name="major" value="<%= user.major %>" />
+			</p>
+			<input type="submit" value="保存" id="saveBtn" />
+		</form>
+	</div>
 	<h3>提过的问题</h3>
 	<ul>
 		<% for(var i=0; i<questions.length; i++){ %>
@@ -18,6 +35,21 @@
 			</li>
 		<% } %>
 	</ul>
+	<h3>回答过的问题</h3>
+	<ul>
+		<% for(var i=0; i<answers.length; i++){ %>
+			<li>
+				<h4>标题：<%= answers[i].title %></h4>
+				<p>内容：<%= answers[i].content %></p>
+			</li>
+		<% } %>
+	</ul>
 <% }else{ %>
 	<h1>该用户还不存在！</h1>
 <% } %>
+<script>
+	$("#editBtn").on("click", function(){
+		$("#showBox").hide();
+		$("#editBox").show();
+	});
+</script>
