--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,7 @@
                 <img src="/images/search.png" class = "searchBtn" />
             </form>
             <button class = "btn btn-primary" id = "askBtn">提问</button>
+            <span>当前用户：<%= curUser.name %></span>
         </div>
         <div>
             <h1><a href="/reg">register</a></h1>
