--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
     	<link rel='stylesheet' href='/stylesheets/style.css' />
     	<link rel='stylesheet' href='/stylesheets/daye_style.css' />
     	<link rel='stylesheet' href='/stylesheets/common.css' />
+    	<link rel='stylesheet' href='/stylesheets/page.css' />
 <!--     	<link rel='stylesheet' href='/stylesheets/base.css' /> -->
   		<script type="text/javascript" src="/javascripts/jquery.js"></script>
     </head>
