--- a/public/stylesheets/daye_style.scss
+++ b/public/stylesheets/daye_style.scss
@@ -1,6 +1,6 @@
 //reset
 html,body,ul,li{padding: 0;margin: 0;}
-*{line-height: (20px/14px);}
+*{line-height: (20px/14px);box-sizing: border-box;}
 
 body {
   font-size: 14px;
@@ -51,3 +51,5 @@ body {
     #askBtn{margin-left: 30px;}
   .main-article{}
 .rightbar{width: 45%;height: 100%;top: 0;left:55%;background-color: #16a085;z-index: 1000;box-shadow: 0 0 10px #aaa;}
+
+
