--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,1 +1,6 @@
+<form id = "ask-form" class="modal">
+    <div class="askBar"><input type="text" name="title" /></div>
+    <div><textarea  name="detail" class="question-detail-input mt10"></textarea></div>
+</form>
+<ul id="fire-list"></ul>
 <script src = "/javascripts/lib/sea.js"></script>
