--- a/views/index-1.ejs
+++ b/views/index-1.ejs
@@ -1,5 +1,20 @@
 <% include header.ejs %>
+<div class="body-main mt60">
+    <div class="main-content block-center">
+        <div class="new-content">
+            <h3 class="bighead">关注的人</h3>
+            <ul>
+                <li>
+                    <div class="clearfix new-question-title">
+                        <div class="new-question-title-user fl">johnbug</div>
+                        <div class="new-question-title-q fl">苹果是如何优化 iOS 7.1 在 iPhone 4 上的体验的？</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
+    </div>
+</div>
 <% include footer.ejs %>
 <script>
     seajs.config({base: "/javascripts/sea_modules"})
