--- a/views/start.ejs
+++ b/views/start.ejs
@@ -46,7 +46,7 @@
 <% include footer.ejs %>
 <script>
     seajs.config({base: "/javascripts/sea_modules"})
-    seajs.use('index',function(start){
+    seajs.use('start',function(start){
         start.init();
     });
 </script>
