--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,8 +6,10 @@
     	<link rel='stylesheet' href='/stylesheets/daye_style.css' />
     	<link rel='stylesheet' href='/stylesheets/common.css' />
     	<link rel='stylesheet' href='/stylesheets/page.css' />
+        <link rel="stylesheet" href="/stylesheets/jquery.modal.css" />
 <!--     	<link rel='stylesheet' href='/stylesheets/base.css' /> -->
   		<script type="text/javascript" src="/javascripts/jquery.js"></script>
+        <script type="text/javascript" src="/javascripts/jquery.modal.min.js"></script>
     </head>
   	<body>
   		<%- body %>
