--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,14 +2,11 @@
 <html>
 	<head>
     	<title><%= title %></title>
-    	<link rel='stylesheet' href='/stylesheets/style.css' />
-    	<link rel='stylesheet' href='/stylesheets/daye_style.css' />
-    	<link rel='stylesheet' href='/stylesheets/common.css' />
-    	<link rel='stylesheet' href='/stylesheets/page.css' />
-        <link rel="stylesheet" href="/stylesheets/jquery.modal.css" />
-<!--     	<link rel='stylesheet' href='/stylesheets/base.css' /> -->
+        <link rel="stylesheet" href="/stylesheets/bootstrap.css"/>
+        <link rel="stylesheet" href="/stylesheets/flat-ui.css"/>
+        <link rel="stylesheet" href="/stylesheets/page.css"/>
   		<script type="text/javascript" src="/javascripts/jquery.js"></script>
-        <script type="text/javascript" src="/javascripts/jquery.modal.min.js"></script>
+        <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
     </head>
   	<body>
   		<%- body %>
