--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -1,162 +1,56 @@
-/*flat-ui*/
-*{box-sizing: border-box;}
-.flat-ui-header{
-    position: fixed;
-    left: 0;top: 0;
-    height: 50px;
-    border-bottom: 1px solid #aaaaaa;
-    width: 100%;
-    z-index: 1;
-    display: none;
-    background-color: #fff;
-}
-.header-container{
-    position: relative;
-    width: 100%;
-}
+/*extend flat ui kit class*/
+.mt5{margin-top: 5px;}
+.mt50{margin-top: 50px;}
+.mt80{margin-top: 80px;}
+.mt60{margin-top: 60px;}
 
-.header-main{
-    position: relative;
-    width: 70%;
-    height: 50px;
-}
-
-.menu-set{
-    height: 50px;
-    padding-left: 14.28%;
-    border-right: 1px solid #eeeeee;
-}
-
-.user-set{
-    position: relative;
-    width: 30%;
-    height: 50px;
-}
-.user{padding: 15px 0;position: relative;}
-.brand{
-    position: absolute;
-    font-size: 3em;
-    width: 100%;
-    color: #eeeeee;
-    top: 200px;
-    z-index: 1;
-    left: 0;
-    padding: 0;
-    height: 50px;
-}
-
-.body-main{
-    /*padding-top: 50px;*/
-    position: relative;
-}
 
 .main-logo{
-    background-image: url("../images/sunset.jpg");
-    background-size: 100%;
-    background-repeat:no-repeat;
-    width: 100%;
-    height: 370px;
-    overflow: hidden;
+    background-image: url('../images/sunset.jpg');
+    margin-top: 53px;
+    min-height: 400px;
+    color: #ffffff;
 }
-.main-logo h2,.main-logo h3{color: #fff;display: none;}
-.main-logo h2{margin-top: 160px;}
-
-.main-content{
-    position: relative;
-    width: 80%;
-}
-.content-user{
-    position: relative;
-    width: 50%;
-    padding: 50px 20px;
+.start-log{
+    padding-top: 50px;
 }
 
-.clearfix{overflow:hidden;}
-
-.flat-ui-btn{
-    border: none;
-    background: #3498db;
-    color: white;
-    font-size: 16.5px;
-    text-decoration: none;
-    text-shadow: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    -webkit-transition: 0.25s;
-    -moz-transition: 0.25s;
-    -o-transition: 0.25s;
-    transition: 0.25s;
-    -webkit-backface-visibility: hidden;
-    padding: 12px 60px 13px 60px;
-    border-radius: 6px;
+.start-hot{
+    margin-top: 50px;
+    box-shadow: 0 0 7px #aaa;
+}
+.text-center{
+    text-align: center;
 }
 
-.content-hot{
-    width: 100%;
-    border-radius: 6px;
-    box-shadow: 0 0 6px #aaa;
+.white-f{
+    color: #ffffff
+}
+.sm-f{
+    font-size: 0.8em;
+}
+.high-strong{
+    background-color: #e0e0e0;
+    border-bottom: 1px solid #808080;
 }
 
-.bighead{
-    background-color: #eeeeee;
-    margin: 0;
-    padding: 10px 6px;
-    border-bottom:1px solid #aaaaaa ;
-    color: #808080;
-}
-
-.hot-content ul li {
-    list-style: none;
-    border-bottom: 1px solid #aaaaaa;
-}
-
-.question-user{
-    width: 30%;
-    padding: 20px 10px;
-}
-
-.question-title{
-    width: 70%;
-    padding: 20px 10px;
-    color: #808080;
-}
-
-.user-img{border-radius: 50px;display: inline-block;box-shadow: 0 0 6px #aaa;}
-.user-img img{width: 50px;}
-
-.searchBtn img {width: 50px;}
-.searchBar {padding: 10px 10px;}
-.searchBar input,.askBar input{height: 30px;width: 300px;border-radius: 3px;border: 1px solid #aaaaaa;}
-.askBtn{padding: 15px;}
-.askBtn a{text-decoration: none;color: #808080;}
-
-.mt10{margin-top: 10px;}
-.mt50{margin-top: 50px;}
-.mt60{margin-top: 60px;}
-.mt55{margin-top: 55px;}
-.new-content{
-
-}
-.new-content ul li{
-    list-style: none;
-    padding: 20px 5px;
-}
-.new-question-title{
+.modal-mid{
+    margin-top: 180px;
 
 }
 
-.new-question-title-user{
-    width: 10%;
+.q-content{
+    border-top: 1px solid #e0e0e0;
 }
-.new-question-title-q{
-    width: 90%;
+
+.img-user{
+    width: 48px;
 }
-.question-detail-input{
-    width: 300px;
-    height: 300px;
+.question{
+    border-bottom: 1px solid #f0f0f0;
 }
 
 
-.block{display: block;}
-.none-dis{display: none;}
+.modal-content{
+    background-color: #edeff1;
+}
