--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,32 +1,51 @@
-<header class="flat-ui-header" id = "header">
-    <div class="header-container clearfix">
-        <div class="header-main fl">
-           <div class="menu-set clearfix">
-               <div class="searchBar fl">
-                   <form>
-                       <input type="text" class=""/>
-                   </form>
-               </div>
-               <div class="fl">
-                   <a href="" class="searchBtn">
-                       <img src="images/search.png" />
-                   </a>
-               </div>
-               <div class="fl askBtn">
-                   <a href="javascript:void();">提问</a>
-               </div>
-           </div>
-        </div>
-        <div class="user-set fl">
-            <div class="fl user">
-                <% if(curUser) {%>
-                <span>用户</span>
-                <a><%= curUser.name %></a>
-                <% } %>
-            </div>
-        </div>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
+            <span class="sr-only">Toggle navigation</span>
+        </button>
+        <a class="navbar-brand" href="#">答也</a>
     </div>
-</header>
-<legend class="brand text-center" id = "brand">
-    答也
-</legend>
+    <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="#fakelink">首页</a></li>
+            <li><a href="#fakelink">话题</a></li>
+        </ul>
+        <form class="navbar-form navbar-left" action="#" role="search">
+            <div class="form-group">
+                <div class="input-group">
+                    <input class="form-control" type="search" placeholder="Search">
+                      <span class="input-group-btn">
+                        <button type="submit" class="btn"><span class="fui-search"></span></button>
+                      </span>
+                </div>
+            </div>
+        </form>
+        <button class="btn btn-embossed navbar-btn btn-sm" id="ask">提问</button>
+        <div class=" btn-group mtn navbar-right">
+            <% if(curUser) {%>
+            <button class="btn dropdown-toggle clearfix btn-inverse navbar-btn btn-sm mrs" data-toggle="dropdown">
+                <span class="filter-option pull-left"><%= curUser.name %></span>&nbsp;
+            </button>
+            <span class="dropdown-arrow"></span>
+            <ul class="dropdown-menu" role="menu" style="overflow-y: auto; min-height: 108px; max-height: 239px;">
+                <li rel="0" class="selected">
+                    <a tabindex="-1" href="#" class="opt "><span class="pull-left">我的资料</span></a>
+                </li>
+                <li rel="1">
+                    <a tabindex="-1" href="#" class="opt "><span class="pull-left">我的好友</span></a>
+                </li>
+                <li rel="2">
+                    <div class="divider"></div>
+                    <a tabindex="-1" href="#" class="opt "><span class="pull-left">我的消息</span></a>
+                </li>
+                <li rel="3"><a tabindex="-1" href="#" class="opt ">
+                        <span class="pull-left">我的设置</span></a>
+                </li>
+                <li rel="4">
+                    <a tabindex="-1" href="/logout" class="opt highlighted"><span class="pull-left">退出登录</span></a>
+                </li>
+            </ul>
+            <% } %>
+        </div>
+    </div><!-- /.navbar-collapse -->
+</nav><!-- /navbar -->
