--- a/views/index-1.ejs
+++ b/views/index-1.ejs
@@ -1,23 +1,30 @@
 <% include header.ejs %>
-<div class="body-main mt60">
-    <div class="main-content block-center">
-        <div class="new-content">
-            <h3 class="bighead">关注的人</h3>
-            <ul>
-                <li>
-                    <div class="clearfix new-question-title">
-                        <div class="new-question-title-user fl">johnbug</div>
-                        <div class="new-question-title-q fl">苹果是如何优化 iOS 7.1 在 iPhone 4 上的体验的？</div>
-                    </div>
-                </li>
-            </ul>
-        </div>
 
+<div class="container row mt60">
+    <div class="col-lg-8 col-md-8 col-sm-12">
+
+         <div class="btn-toolbar">
+            <div class="btn-group">
+                <a class="btn btn-info active" href="#fakelink"><span class="fui-user"></span><span>我关注的人的动态</span></a>
+                <a class="btn btn-inverse" href="#fakelink"><span class="fui-chat"></span><span>我关注的话题</span></a>
+                <a class="btn btn-primary" href="#fakelink"><span class="fui-heart"></span><span>我的收藏夹</span></a>
+                <a class="btn btn-warning" href="#fakelink"><span class="fui-eye"></span><span>探索和发现</span></a>
+            </div>
+        </div> <!-- /toolbar -->
+
+        <div class="col-md-12 mtm q-content">
+
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-14">
+        <div class="col-sm-12 mt50">
+            <img src="/images/x04.jpg" class="img-rounded img-responsive"/>
+        </div>
     </div>
 </div>
+
 <% include footer.ejs %>
 <script>
-    seajs.config({base: "/javascripts/sea_modules"})
     seajs.use('index',function(index){
         index.init();
     });
