--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -10,19 +10,19 @@
                     <div class="form-group">
 
                         <div class="col-sm-12">
-                            <input type="text" class="form-control"  placeholder="问题标题">
+                            <input type="text" class="form-control"  placeholder="问题标题" id="ask-modal-title">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-sm-12">
-                            <textarea class="form-control" rows="3" placeholder="问题描述"></textarea>
+                            <textarea class="form-control" rows="3" placeholder="问题描述" id="ask-modal-content"></textarea>
                          </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary">提交问题</button>
+                <button type="button" class="btn btn-primary" id="ask-modal-btn">提交问题</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
