--- a/views/start.ejs
+++ b/views/start.ejs
@@ -8,7 +8,7 @@
 <div class="row start-log">
     <div class="col-md-offset-2 col-md-8">
         <div class="col-md-6 col-sm-6 text-center ptm">
-            <button class="btn btn-hg btn-info btn-block">
+            <button class="btn btn-hg btn-info btn-block" id="reg-btn">
                 <span>注册</span>
             </button>
         </div>
