--- a/views/header.ejs
+++ b/views/header.ejs
@@ -29,7 +29,7 @@
             <span class="dropdown-arrow"></span>
             <ul class="dropdown-menu" role="menu" style="overflow-y: auto; min-height: 108px; max-height: 239px;">
                 <li rel="0" class="selected">
-                    <a tabindex="-1" href="#" class="opt "><span class="pull-left">我的资料</span></a>
+                    <a tabindex="-1" href="/user/<%= curUser.name%>" class="opt "><span class="pull-left">我的资料</span></a>
                 </li>
                 <li rel="1">
                     <a tabindex="-1" href="#" class="opt "><span class="pull-left">我的好友</span></a>
