--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -29,6 +29,9 @@
 </div><!-- /.modal -->
 
 <script src = "/javascripts/lib/sea.js"></script>
+<script src = "/javascripts/flatui-radio.js"></script>
+<script src ="/javascripts/flatui-checkbox.js"></script>
+
 <script>
     seajs.config({base: "/javascripts/sea_modules"})
 </script>
